--- a/_example/label_image/Classify images using pre-trained model.ipynb
+++ b/_example/label_image/Classify images using pre-trained model.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import \"github.com/mattn/go-tflite\""
+    "import \"github.com/iAmPlus/go-tflite\""
    ]
   },
   {
